--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -10,8 +10,9 @@
                     <h5>Sign up</h5>
                 </div>
                 
+                {% include 'alert.html' %}
                 <form  class="sign-form widget-form contact_form " action="{% url 'register' %}" method="POST">
-                    {% csrf_token %}
+                {% csrf_token %}
                     <div class="form-group">
                         {{ form.username }}
                     </div>
@@ -26,16 +27,17 @@
                     </div>
                     <div class="sign-controls form-group">
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="rememberMe" required>
+                            <input type="checkbox" class="custom-control-input" id="rememberMe">
                             <label class="custom-control-label" for="rememberMe">Agree to our <a href="#" class="btn-link">terms & conditions</a> </label>
                         </div>
                     </div>
+                    <div class="py-3 text-center">
+                        <p class="text-danger lead">{{ form.username.errors }}</p>
+                        <p class="text-danger lead">{{ form.email.errors }}</p>
+                        <p class="text-danger lead">{{ form.non_field_errors }}</p>
+                    </div>
                     <div class="form-group">
                         <button type="submit" value="submit" class="btn-custom">Sign Up</button>
-                    </div>
-                    <div class="py-3">
-                        {{ form.email.errors }}
-                        {{ form.non_field_errors }}
                     </div>
                     <p class="form-group text-center">Already have an account? <a href="{% url 'login' %}" class="btn-link">Login</a> </p>
                 </form>
