--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -4,15 +4,24 @@
 
     <!--Login-->
     <section class="section pt-55 mb-50">
+    {% if request.GET.command == 'verification' %}
+
+	<div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px; margin-bottom:100px;">
+	Thank you for registering with us. We have sent you a verification email to your email address {{ request.GET.email }}'
+	<br><br>
+	Already verified? <a href="{% url 'login' %}">Login</a>
+	</div>
+	{% else %}
         <div class="container">
             <div class="sign widget ">
                 <div class="section-title">
                     <h5>Login</h5>
                 </div>
+                {% include 'alert.html' %}
                 <form  action="{% url 'login' %}" class="sign-form widget-form " method="POST">
                     {% csrf_token %}
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Username*" name="username" value="">
+                        <input type="text" class="form-control" placeholder="Email*" name="email" value="">
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control" placeholder="Password*" name="password" value="">
@@ -33,7 +42,8 @@
                 </form>
             </div> 
         </div>
-    </section>        
+    </section>  
+    {% endif %}      
 
     
 
