--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -13,29 +13,29 @@
                 {% include 'alert.html' %}
                 <form  class="sign-form widget-form contact_form " action="{% url 'register' %}" method="POST">
                 {% csrf_token %}
+                    {{ form.non_field_errors }}
                     <div class="form-group">
                         {{ form.username }}
+                        {{ form.username.errors }}
                     </div>
                     <div class="form-group">
                         {{ form.email }}
+                        {{ form.email.errors }}
                     </div>
                     <div class="form-group">
                         {{ form.password }}
+                        {{ form.password.errors }}
                     </div>
                     <div class="form-group">
                         {{ form.confirm_password }}
+                        {{ form.confirm_password.errors }}
                     </div>
-                    <div class="sign-controls form-group">
+                    <!-- <div class="sign-controls form-group">
                         <div class="custom-control custom-checkbox">
                             <input type="checkbox" class="custom-control-input" id="rememberMe">
                             <label class="custom-control-label" for="rememberMe">Agree to our <a href="#" class="btn-link">terms & conditions</a> </label>
                         </div>
-                    </div>
-                    <div class="py-3 text-center">
-                        <p class="text-danger lead">{{ form.username.errors }}</p>
-                        <p class="text-danger lead">{{ form.email.errors }}</p>
-                        <p class="text-danger lead">{{ form.non_field_errors }}</p>
-                    </div>
+                    </div> -->
                     <div class="form-group">
                         <button type="submit" value="submit" class="btn-custom">Sign Up</button>
                     </div>
@@ -45,6 +45,6 @@
                
            
         </div>
-    </section>        
+    </section>       
 
 {% endblock content %}
