--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -18,8 +18,8 @@
                             <h4>{{post.title}}</h4>
                             <div class="post-single-info">
                                 <ul class="list-inline">
-                                    <li><a href="{% url 'author' post.author.user.username%}"><img src="{{post.author.avatar.url}}" alt=""></a></li>
-                                    <li><a href="{% url 'author' post.author.user.username%}">{{post.author.name}}</a> </li>
+                                    <li><a href="{% url 'blog:author' post.author.user.username%}"><img src="{{post.author.avatar.url}}" alt=""></a></li>
+                                    <li><a href="{% url 'blog:author' post.author.user.username%}">{{post.author.name}}</a> </li>
                                     <li class="dot"></li>
                                     <li>{{post.publish | date}}</li>
                                     <li class="dot"></li>
@@ -37,15 +37,15 @@
                         </div>
 
                         <div class="post-single-footer">
-                            {% for tag in post.tags.all %}
                             <div class="tags">
                                 <ul class="list-inline">
+                                {% for tag in post.tags.all %}
                                     <li>
                                         <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{tag.name}}</a>
                                     </li>
+                                {% endfor %}
                                 </ul>
                             </div>
-                            {% endfor %}
                             <div class="social-media">
                                 <ul class="list-inline">
                                     <li>
@@ -83,7 +83,7 @@
                         <!--widget-author-->
                         <div class="widget">
                             <div class="widget-author">
-                                <a href="{% url 'author' post.author.user.username%}" class="image">
+                                <a href="{% url 'blog:author' post.author.user.username%}" class="image">
                                     <img src="{{post.author.avatar.url}}" alt="">
                                 </a>
                                 <h6>
@@ -129,7 +129,9 @@
                    
                     <!--next & previous-posts-->
                     <div class="row">
+                        <!-- Previous Post Widget -->
                         <div class="col-md-6">
+                            {% if previous_post %}
                             <div class="widget">
                                 <div class="widget-next-post">
                                     <div class="small-post">
@@ -148,8 +150,12 @@
                                     </div>
                                 </div>
                             </div>
+                            {% endif %}
                         </div>
+
+                        <!-- Next Post Widget -->
                         <div class="col-md-6">
+                            {% if next_post %}
                             <div class="widget">
                                 <div class="widget-previous-post">
                                     <div class="small-post">
@@ -170,6 +176,7 @@
                                     </div>
                                 </div>
                             </div>
+                            {% endif %}
                         </div>
                     </div>
                     <!--/-->
