--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -54,12 +54,12 @@
                                     <div class="post-card-info">
                                         <ul class="list-inline">
                                             <li>
-                                                <a href="{% url 'author' post.author.user.username%}">
+                                                <a href="{% url 'blog:author' post.author.user.username%}">
                                                     <img src="{{post.author.avatar.url}}" alt="">
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="{% url 'author' post.author.user.username%}">{{post.author.name}}</a>
+                                                <a href="{% url 'blog:author' post.author.user.username%}">{{post.author.name}}</a>
                                             </li>
                                             <li class="dot"></li>
                                             <li><span class="icon_clock_alt pr-2"></span>{{post.publish | date}}</li>
