--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -23,9 +23,11 @@
                                     <li class="dot"></li>
                                     <li>{{post.publish | date}}</li>
                                     <li class="dot"></li>
-                                    <li><span id="time"></span> minutes read</li>
+                                    <li><span id="time"></span> min read</li>
                                     <li class="dot"></li>
-                                    <li>3 comments</li>
+                                    {% with comments.count as total_comments %}
+                                    <li>{{total_comments}} comment{{total_comments | pluralize}}</li>
+                                    {% endwith %}
                                 </ul>
                             </div>
                         </div>
@@ -184,64 +186,29 @@
                     <!--widget-comments-->
                     <div class="widget mb-50">
                         <div class="title">
-                            <h5>3 Comments</h5>
+                            {% with comments.count as total_comments %}
+                            <h5>{{total_comments}} Comment{{total_comments | pluralize}}</h5>
+                            {% endwith %}
                         </div>
                         <ul class="widget-comments">
+                            {% for comment in comments %}
                             <li class="comment-item">
                                 <img src="{% static 'img/user/1.jpg' %}" alt="">
                                 <div class="content">
                                     <ul class="info list-inline">
-                                        <li>Mohammed Ali</li>
+                                        <li>{{comment.name}}</li>
                                         <li class="dot"></li>
-                                        <li> January 15, 2021</li>
+                                        <li> {{ comment.date_created | date }}</li>
                                     </ul>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus at doloremque adipisci eum placeat quod
-                                        non fugiat aliquid sit similique!
-                                    </p>
+                                    <p>{{comment.comment | linebreaks }}</p>
                                     <div>
                                         <a href="#" class="link">
                                             <i class="arrow_back"></i> Reply</a>
                                     </div>
                                 </div>
                             </li>
-                            <li class="comment-item">
-                                <img src="{% static 'img/author/1.jpg' %}" alt="">
-                                <div class="content">
-                                    <ul class="info list-inline">
-                                        <li>Simon Albert</li>
-                                        <li class="dot"></li>
-                                        <li> January 15, 2021</li>
-                                    </ul>
-                        
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus at doloremque adipisci eum placeat quod
-                                        non fugiat aliquid sit similique!
-                                    </p>
-                                    <div>
-                                        <a href="#" class="link">
-                                            <i class="arrow_back"></i> Reply</a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="comment-item">
-                                <img src="{% static 'img/user/2.jpg' %}" alt="">
-                                <div class="content">
-                        
-                                    <ul class="info list-inline">
-                                        <li>Adam bobly</li>
-                                        <li class="dot"></li>
-                                        <li> January 15, 2021</li>
-                                    </ul>
-                        
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus at doloremque adipisci eum placeat quod
-                                        non fugiat aliquid sit similique!
-                                    </p>
-                        
-                                    <div>
-                                        <a href="#" class="link">
-                                            <i class="arrow_back"></i> Reply</a>
-                                    </div>
-                                </div>
-                            </li>
+                            {% endfor %}
+
                         </ul>
                        <!--Leave-comments-->
                         <div class="title">
@@ -249,40 +216,44 @@
                         </div>
                         <form class="widget-form" action="#" method="POST" id="main_contact_form">
                             <p>Your email adress will not be published ,Requied fileds are marked*.</p>
-                            <div class="alert alert-success contact_msg" style="display: none" role="alert">
+                            {% if new_comment %}
+                            <div class="alert alert-success contact_msg" role="alert">
                                 Your message was sent successfully.
                             </div>
+                            {% else %}
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Message*" required="required"></textarea>
+                                        {{comment_form.comment}}
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" name="name" id="name" class="form-control" placeholder="Name*" required="required">
+                                        {{comment_form.name}}
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="email" name="email" id="email" class="form-control" placeholder="Email*" required="required">
+                                        {{comment_form.email}}
                                     </div>
                                 </div>
                                 <div class="col-12 mb-20">
                                     <div class="form-group">
                                         <input type="text" name="website" id="website" class="form-control" placeholder="website">
                                     </div>
-                                    <label>
-                                        <input name="name" type="checkbox" value="1" required="required"> 
-                                       <span>save my name , email and website in this browser for the next time I comment.</span>                                   
-                                    </label>
+                                    {% comment %} <label> {% endcomment %}
+                                        {% comment %} <input name="name" type="checkbox" value="{{comment_form.name}}" required="required">  {% endcomment %}
+                                       {% comment %} <span>save my name , email and website in this browser for the next time I comment.</span>                                    {% endcomment %}
+                                    {% comment %} </label> {% endcomment %}
                                 </div>
                                 <div class="col-12">
-                                    <button type="submit" name="submit" class="btn-custom">
+                                    <button type="submit" name="submit" class="btn-custom" value="submit">
                                         Post Comment
                                     </button>
+                                {% csrf_token %}
                                 </div> 
                             </div>
+                            {% endif %}
                         </form>
                     </div>
                 </div>
